Backend: Add Casbin
Added Casbin for easier user authorization.
