# movietown/model/movie.go
@@ -1,11 +1,11 @@
 package model
 
 type Movie struct {
-	ID          uint `gorm:"primaryKey"`
-	Title       string
-	Director    string
-	Description string
-	Length      int
-	MovieTypeId *uint
-	MovieType   MovieType `gorm:"foreignKey:MovieTypeId"`
+	ID          uint `gorm:"primaryKey" json:"id"` 
+	Title       string `json:"title"`
+	Director    string `json:"director"`
+	Description string `json:"description"`
+	Length      int     `json:"length"`
+	MovieTypeId *uint   `json:"movie_type_id"`
+	MovieType   MovieType `gorm:"foreignKey:MovieTypeId" json:"movie_type"`
 }
